--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ targetCompatibility = 1.7
 
 group = 'com.ullink.slack'
 archivesBaseName = 'simpleslackapi'
-version = '0.5.0'
+version = '0.5.1'
 
 task copyRuntimeLibs(type: Copy) {
   into "lib"
@@ -109,7 +109,7 @@ def pomConfig = {
             name 'Georges Gomes'
         }
         contributor {
-            name 'François Valdy'
+            name 'Franï¿½ois Valdy'
         }
     }
     scm {
@@ -123,7 +123,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
-            artifact sourcesJar 
+            artifact sourcesJar
             artifact javadocJar
             pom.withXml {
                 asNode().appendNode('description', 'A simple API to build bot running on Slack')
@@ -180,9 +180,9 @@ dependencies {
     testCompile 'org.slf4j:slf4j-simple:1.7.7'
 }
 
-test {   
-    testLogging {        
-        exceptionFormat = 'full'  
+test {
+    testLogging {
+        exceptionFormat = 'full'
         showStackTraces = "true"
-    }   
+    }
 }
